Refactor backend controllers and update frontend